# openscenesense

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
Examples/: OpenAIDemo.py  OpenrouterDemo.py  README.md
openscenesense/: __init__.py  analyzer.py  models.py  openrouter_analyzer.py
src/openscenesense/: __init__.py  analyzer.py  frame_selectors.py  models.py  openrouter_analyzer.py
tests/: run_matrix.py  run_openai_integration.py  run_openrouter_integration.py
